--- a/purchase_indonesia/views/mail_template_purchase.xml
+++ b/purchase_indonesia/views/mail_template_purchase.xml
@@ -266,4 +266,86 @@
 	  </field>
        </record>
     </data>
+
+    <data noupdate="0">
+        <record id="email_template_stock_picking_2" model="mail.template">
+          <field name="name">Email Template Stock Picking User</field>
+          <field name="email_from">admin@palmagroup.co.id</field>
+          <field name="subject">Approval GRN / SRN  To ${object.assigned_to.name}</field>
+          <field name="email_to">${object.requested_by.partner_id.email}</field>
+          <field name="lang">${object.lang}</field>
+          <field name="model_id" ref="stock.model_stock_picking"/>
+          <field name="auto_delete" eval="True"/>
+	  <field name="body_html">
+            <![CDATA[
+	      <style>
+             input[type="submit"]{border:none; background:#f5f5f7; color:#ACCC6C}
+          </style>
+	      <p>Dear ${(object.requested_by.name)},<br/>
+	      <br/>
+	      You have one approval Received GRN / SRN , ${(object.complete_name_picking)} <br/>
+
+	      <br/>
+
+	      <p>
+	        With Detail:
+	        <br/>
+	        Reference Purchase Request Number,${(object.pr_source)},<br/>
+	        <br/>
+            Reference Purchase Order Number,${(object.purchase_order_name)},<br/>
+            <br/>
+            Shipper By , ${(object.shipper_by)}<br/>
+            <br/>
+
+	      </p>
+
+
+          <br/>
+
+          <p>
+	      Please Follow This Step To GRN/SRN:
+	      </p>
+
+	      <br/>
+
+
+	      </p>
+
+            <div class="container">
+              <p>
+                Step to Approval GRN / SRN .
+              </p>
+
+              <p>
+                <ul>
+                  <li>Login To ERP Palma Group
+                     <ul>
+                        <li>Click This Button to <a href="${(object.web_url())}/web?db=${(object.database())}#id=${(object.id)}&view_type=form&model=${(object.email_model())}" target="self"><input type="submit" Value="Login"></a></li>
+                        <li>Input Your Username Palma Group in Field Username. i.e: Baac123</li>
+                        <li>Input Your Password ERP Palma Group in Field Password.
+                            <ul style="list-style-type:circle">
+                              <li>If You cannot Login Please Contact Department ICT</li>
+                            </ul>
+                        </li>
+                        <li>Click Button Login </li>
+                     </ul>
+                  </li>
+                  <li>Check Your GRN / SRN  Inside ERP Palma Group</li>
+                  <li>Click Button Approve Inside GRN / SRN in ERP Palma Group</li>
+                </ul>
+              </p>
+
+            </div>
+
+              Regards,
+              <br/>
+              ${(object.company_id.name)}
+              <br/>
+
+
+	    ]]>
+	  </field>
+       </record>
+    </data>
+
 </odoo>
