--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -87,7 +87,7 @@
                  <xpath expr="//field[@name='line_ids']//tree//field[@name='analytic_account_id']" position="after">
                      <field name="validation_budget" invisible="1"/>
                      <field name="control_unit" string="Unit Control" attrs="{'readonly': [('validation_budget','!=',True)]}"/>
-                     <field name="budget_available" string="Budget Available"
+                     <field name="budget_available" string="Budget Price"
                                  attrs="{'readonly': [('validation_budget','!=',True)]}"/>
                  </xpath>
              </field>
@@ -115,7 +115,7 @@
                  <xpath expr="//field[@name='line_ids']//form//field[@name='analytic_account_id']" position="after">
                      <field name="validation_budget" invisible="1"/>
                      <field name="control_unit" string="Unit Control" attrs="{'readonly': [('validation_budget','!=',True)]}"/>
-                     <field name="budget_available" string="Budget Available"
+                     <field name="budget_available" string="Budget Price"
                                  attrs="{'readonly': [('validation_budget','!=',True)]}"/>
                  </xpath>
              </field>
