[FIX] purchase_indonesia : bug fix friday 31 may 1. Fix bug in report progress PP status PO cannot done 2. FIX bug in stock_picking change state purhase tender if receive partial
[ADD] purchase_indonesia : subtotal change if qty_tender > 0

[ADD] purchase_indonesia : fix price in quotation comparison form

[FIX]  purchase_indonesia : fix bug last price in back oreder po cannot show

--- a/purchase_indonesia/views/inherit_purchase_request.xml
+++ b/purchase_indonesia/views/inherit_purchase_request.xml
@@ -40,7 +40,7 @@
                           <field name="validation_correction" invisible="1"/>
                           <field name="validation_technic" invisible="1"/>
                           <field name="validation_state_budget" invisible="1"/>
-                          <field name="type_purchase" string="Purchase Type" options="{'no_create_edit': True}" attrs="{'readonly': [('state','!=','draft')]}"/>
+                          <field name="type_purchase" string="Purchase Type" required="1" options="{'no_create_edit': True}" attrs="{'readonly': [('state','!=','draft')]}"/>
                  </xpath>
              </field>
          </record>
